<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="@dimen/large_thumb_width"
            android:layout_height="@dimen/large_thumb_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_med"
            android:background="@drawable/image_background"
            android:padding="@dimen/divider"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextBlue"
                tools:text="Spirited Away" />

            <TextView
                android:id="@+id/rating_votes_metascore_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_tv"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorTextDarkGrey"
                tools:text="Rating: 8.2 | Votes: 5000 | Metascore: N/A" />

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_votes_metascore_tv"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorTextBlack"
                tools:text="A young soldier faces profound disillusionment in the soul-destroying horror of World War I." />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/plot_tv"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:minWidth="120dp"
                        android:text="IMDB Rank"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rank_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:minWidth="120dp"
                        android:text="Year"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/year_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="2019" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:minWidth="120dp"
                        android:text="@string/rated"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rated_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="UNRATED" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/released"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/released_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="24 Aug 1930" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/runtime"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/runtime_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="136 min" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/genre"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genre_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="Drama, War" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/director"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/director_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="Lewis Milestone" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/writer"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/writer_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="Erich Maria Remarque (by), Maxwell Anderson (adaptation), George Abbott (screen play), Del Andrews (adaptation), C. Gardner Sullivan (supervising story chief)" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/actors"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actors_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/language"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/language_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="English, French, German, Latin" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/country"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/country_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="USA" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/awards"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorTextBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/awards_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_votes_tv"
                        android:layout_marginTop="@dimen/margin_small"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:text="Awards" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>